src/components/Navbar/Navbar.module.css
@import '../../variables.css';

.navbar {
  background-color: #221627;
  margin-bottom: 16px;
  padding: 8px 0;
}

.navbarContent {
  padding: 0 16px;
  max-width: 900px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

.staticContent {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.homeLink {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-decoration: none;
  font-family: 'Fredoka One', -apple-system, BlinkMacSystemFont, 'Segoe UI',
    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
    'Helvetica Neue', sans-serif;
}

.siteName {
  padding: 0;
  margin: 0;
  margin-left: 12px;
}

.dropdown {
  appearance: none;
  -webkit-appearance: none;
  background: none;
  border: none;
  color: unset;
  font-family: unset;
  font-size: unset;
  cursor: pointer;
  padding: 0;
}

.expandableSection {
  overflow: hidden;
  transition: max-height 0.25s;
}

.spacer {
  height: 16px;
}

.linkList {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-end;
  margin-bottom: 8px;
  flex-wrap: wrap;
}

.linkWrapper:not(:last-child) {
  margin-right: 8px;
}

.link {
  text-decoration: none;
  text-align: center;
  margin-bottom: 8px;
}

.link:hover {
  color: #000000;
}

@media screen and (max-width: 500px) {
  .homeLink {
    margin-bottom: 8px;
  }

  .staticContent {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 8px;
  }

  .linkList {
    margin-top: 8px;
    justify-content: center;
  }
}

